--- a/fronted/staff-login.html
+++ b/fronted/staff-login.html
@@ -149,6 +149,9 @@
                       case "admin":
                           window.location.href = "staff/admin-home.html";
                           break;
+                        case "coordinator":
+                          window.location.href = "staff/coordinator-home.html";
+                          break;
                       default:
                         window.location.href = "home.html";
                         break;
