updated staff cocohome showcourses html page

--- a/fronted/staff/coordinator-home.html
+++ b/fronted/staff/coordinator-home.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,13 +24,20 @@
     <div class="login-container card shadow">
     <div class="card-body">
     <center>
-    <h3>Welcome,coco</h3>
-    <div>This is the coco home page!</div> <br>
-    <a class="btn btn-primary" href="show-students.html" role="button">show students</a>
-    <a class="btn btn-primary" href="" role="button">Add Mark scheme</a>
-    <a class="btn btn-primary" href="" role="button">Add Evaluation</a>
-    <a class="btn btn-primary" href="" role="button">Assigned Task</a>
-    <a class="btn btn-primary" href="" role="button">show completed task</a>
+    <h3>Welcome, coco</h3>
+    <div>This is the Coco Home page!</div> <br>
+    <a class="btn btn-danger" href="show-students.html" style="width: 120px; height: 100px;" role="button">Show Students</a>
+    &nbsp;
+    <a class="btn btn-warning" href="show-groups.html"  style="width: 120px; height: 100px;" role="button">Show Groups</a>
+    &nbsp;
+    <a class="btn btn-primary" href="" style="width: 120px; height: 100px;" role="button">Add Mark Scheme</a>
+    &nbsp;
+    <a class="btn btn-success" href="" style="width: 120px; height: 100px;" role="button">Add Evaluation</a>
+    &nbsp;
+    <a class="btn btn-secondary" href="" style="width: 120px; height: 100px;" role="button">Assigned Task</a>
+    &nbsp;
+    <a class="btn btn-info" href="" style="width: 120px; height: 100px;" role="button">Show Completed Task</a>
+    
     </center>
     </div>
     </div>
