showallstaff and showallgroups file uploaded

--- a/fronted/navbars/admin-navbar.html
+++ b/fronted/navbars/admin-navbar.html
@@ -34,13 +34,13 @@
             <a class="nav-link" href="show-allstudent.html">Show All Students</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="show-staff.html">Show All Staff</a>
+            <a class="nav-link" href="show-allstaff.html">Show All Staff</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="show-courses.html">Show All Courses</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="show-groups.html">Show All Groups</a>
+            <a class="nav-link" href="show-allgroups.html">Show All Groups</a>
           </li>
         </ul>
         <ul class="navbar-nav ms-auto">
